# prism-modular-rs

./: .gitignore  Cargo.toml
prism-input/: Cargo.toml
prism-input/src/: lib.rs
prism-renderer/: Cargo.toml
prism-renderer/common/camera-3d/: Cargo.toml
prism-renderer/common/camera-3d/src/: lib.rs
prism-renderer/common/mesh-structs/: Cargo.toml
prism-renderer/common/mesh-structs/src/: lib.rs
prism-renderer/common/vk-context/: Cargo.toml
prism-renderer/common/vk-context/src/: auto_drop_wrappers.rs  debug_helpers.rs  helpers.rs  lib.rs  vk_init_helpers.rs
prism-renderer/common/vk-wrappers/: Cargo.toml
prism-renderer/common/vk-wrappers/src/: gpu_debug_helpers.rs  lib.rs  structs.rs
prism-renderer/common/vk-wrappers/src/structs/: error_types.rs
prism-renderer/pbr-render-pass/: Cargo.toml
prism-renderer/pbr-render-pass/src/: lib.rs  texture.rs
prism-renderer/src/: lib.rs  presentation.rs  render_object.rs  renderables.rs  swapchain_manager.rs  texture.rs  transfer.rs  transfer_manager.rs  triangle_pass.rs  vertex_pass.rs
prism-renderer/src/triangle_pass/shaders/: triangle.frag  triangle.vert
prism-renderer/src/vertex_pass/shaders/: g_buffer.frag  g_buffer.vert  gbuffer.frag  gbuffer.vert  gbuffer.vert.spv
prism-renderer/transfer-manager/: Cargo.toml
prism-renderer/transfer-manager/src/: lib.rs
prism-renderer/vert-mesh-pbr/: Cargo.toml
prism-renderer/vert-mesh-pbr/shaders/: g_buffer.frag  g_buffer.frag.spv  g_buffer.vert  g_buffer.vert.spv
prism-renderer/vert-mesh-pbr/src/: lib.rs  structs.rs  vert_mesh.rs
src/: main.rs  prism_app.rs  prism_app_activity.rs
src/prism_app_activity/: window_manager.rs
