[package]
name = "prism-modular-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = {version = "0.29.15", features = ["rwh_05"]}
glam = "0.27.0"
prism-renderer = {path = "prism-renderer"}
prism-input = {path = "prism-input"}