[package]
name = "prism-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.61"
vk-context = {path = "common/vk-context"}
transfer-manager = {path = "transfer-manager"}
vert-mesh-pbr = {path = "vert-mesh-pbr"}
