[package]
name = "vk-wrappers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.38"
vk-mem = {git = "https://github.com/gwihlidal/vk-mem-rs.git"}
gpu-allocator = {git = "https://github.com/Traverse-Research/gpu-allocator.git", branch = "ash-0.38"}
ash-window = "0.13.0"
raw-window-handle = "0.6"
